@@ -132,8 +132,8 @@
         <FIELD NAME="gcerrorcount" TYPE="text" NOTNULL="false" SEQUENCE="false" COMMENT="The Grammar Correction errors"/>
         <FIELD NAME="gcerrors" TYPE="text" NOTNULL="false" SEQUENCE="false" COMMENT="The Grammar Correction errors"/>
         <FIELD NAME="gcmatches" TYPE="text" NOTNULL="false" SEQUENCE="false" COMMENT="The Grammar Correction matches"/>
-        <FIELD NAME="wpm" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false" default="0"/>
-        <FIELD NAME="speakingtime" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false" default="0"/>
+        <FIELD NAME="wpm" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false" DEFAULT="0"/>
+        <FIELD NAME="speakingtime" TYPE="int" LENGTH="10" NOTNULL="true" DEFAULT="0" SEQUENCE="false" />
         <FIELD NAME="relevance" TYPE="int" LENGTH="4" NOTNULL="false" SEQUENCE="false" COMMENT="relevance to model %"/>
         <FIELD NAME="timemodified" TYPE="int" LENGTH="10" NOTNULL="false" DEFAULT="0" SEQUENCE="false"/>
         <FIELD NAME="createdby" TYPE="int" LENGTH="10" NOTNULL="false" SEQUENCE="false"/>
