@@ -1252,3 +1252,26 @@ span.mod_solo_corrections_suggestedword {
 	font-weight: bold;
 	background-color: azure;
 }
+
+/* Style for a spinner overlay on a textarea */
+.solo-spinner-overlay {
+	position: relative;
+}
+
+.solo-spinner {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border: 5px solid #f3f3f3;
+	border-top: 5px solid #3498db;
+	animation: solo-spin 1s linear infinite;
+}
+
+@keyframes solo-spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
