@@ -12,9 +12,10 @@
           <!-- <tr><td>{{#str}}stats_autogrammarscore, mod_solo{{/str}}</td><td>{{s.autogrammarscore}}%</td></tr> -->
           <!-- <tr><td>{{#str}}stats_autospellscore, mod_solo{{/str}}</td><td>{{s.autospellscore}}%</td></tr> -->
           <tr> <td>{{#str}}stats_targetwords, mod_solo{{/str}}</td><td>{{s.targetwords}}/{{s.totaltargetwords}}</td></tr>
-          <tr> <td>{{#str}}stats_ideacount, mod_solo{{/str}}</td><td>{{s.ideacount}}</td></tr>
+          <!-- <tr> <td>{{#str}}stats_ideacount, mod_solo{{/str}}</td><td>{{s.ideacount}}</td></tr> -->
           <tr> <td>{{#str}}stats_cefrlevel, mod_solo{{/str}}</td><td>{{s.cefrlevel}}</td></tr>
           <tr> <td>{{#str}}stats_relevance, mod_solo{{/str}}</td><td>{{s.relevance}}</td></tr>
+          <tr> <td>{{#str}}stats_wpm, mod_solo{{/str}}</td><td>{{s.wpm}}</td></tr>
           {{#selftranscribe}}
             <tr><td>{{#str}}stats_aiaccuracy, mod_solo{{/str}}</td><td>{{s.aiaccuracy}}%</td></tr>
           {{/selftranscribe}}
