@@ -29,9 +29,9 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   =  2023051300;
+$plugin->version   =  2023051302;
 $plugin->requires  = 2016052300;      // Requires Moodle 3.1
 $plugin->component = 'mod_solo';
 $plugin->maturity = MATURITY_STABLE;
-$plugin->release = '1.0.27 (Build 2023051300)';
+$plugin->release = '1.0.27 (Build 2023051302)';
 
